[tool.poetry]
name = "sdc-app"
version = "0.1.0"
description = "Dash app to enable interactive running of Scale Dependent Correlation analyses."
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
dash = "^1.20.0"
sdcpy = "^0.2.2"
dash-bootstrap-components = "^0.12.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
